Get react to work

--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
   "name": "pivot_track",
   "private": true,
-  "dependencies": {}
+  "scripts": {
+    "start": "webpack --watch --mode=development"
+  },
+  "dependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "axios": "^0.18.0",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.5",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
+  },
+  "author": "",
+  "license": "ISC",
+  "homepage": "https://github.com/thesimpledev/pivot_track#readme"
 }
