Add simple cov for code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=0dd7113209bac6d769b611991ab34791e2430a7001c024f8f72ca68719354b59
 language: ruby
 rvm:
   - 2.5.1
-script:
-  - bundle exec rails db:migrate RAILS_ENV=test
-  - bundle exec rspec
 before_script:
   - psql -c 'create database pivot_track_test' -U postgres
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+script:
+  - bundle exec rails db:migrate RAILS_ENV=test
+  - bundle exec rspec
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-env:
-  - CC_TEST_REPORTER_ID=0dd7113209bac6d769b611991ab34791e2430a7001c024f8f72ca68719354b59
 services:
   - postgresql
 addons:
